--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <header class="Header">
+  <header class="header">
     <h1>
       <a class="header__homelink" href="#">
         <img class="header__logo" src="./images/logo.svg">
