섹션 배열 정리

--- a/index.html
+++ b/index.html
@@ -38,48 +38,103 @@
 
     <section id="about" class="section">
 
-      <h1 class="section__title">
+      <h1 class="main_title">
         당신 근처의 지역 생활 커뮤니티
       </h1>
 
-      <header class="section__header">
-        <img class="mini__icon" src="./images/중고거래_로고.avif">
+      <div class="total_section">
+        <div class="section_image">
+          <img class="big__ficture" src="./images/중고거래_이미지.avif">
+        </div>
+        <div class="section_explanation">
+          <div class="section_logo">
+            <img class="mini__icon" src="./images/중고거래_로고.avif">
+          </div>
+          <div class="section_words">
+            <div class="section_title">
+              <h2>
+                <a href="https://www.daangn.com/fleamarket/"> 중고거래 </a>
+              </h2>
+            </div>
+            <div class="section_sentence">
+              <p>
+                당근에서 동네 이웃들과 가깝고 따뜻한 거래를 경험해요. 동네인증, 매너온도는 물론 머신러닝 기술을 통한 게시글 분석으로 모두가 안전하게 거래할 수 있도록 노력하고 있어요.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
 
-        <h2 class="section__tile">
-          <a href="https://www.daangn.com/fleamarket/"> 중고거래 </a>
-        </h2>
-        <p>
-          당근에서 동네 이웃들과 가깝고 따뜻한 거래를 경험해요. 동네인증, 매너온도는 물론 머신러닝 기술을 통한 게시글 분석으로 모두가 안전하게 거래할 수 있도록 노력하고 있어요.
-        </p>
+      <div class="total_section">
+        <div class="section_image">
+          <img class="big__ficture" src="./images/동네생활_이미지.avif">
+        </div>
+        <div class="section_explanation">
+          <div class="section_logo">
+            <img class="mini__icon" src="./images/동네생활_로고.avif">
+          </div>
+          <div class="section_words">
+            <div class="section_title">
+              <h2>
+                동네생활
+              </h2>
+            </div>
+            <div class="section_sentence">
+              <p>
+                동네 실시간 소식부터, 맛집 정보, 모임, 일상 공유까지. 지금 우리 동네의 다양한 이야기를 이웃과 함께 나누어요. 동네 이웃만 알 수 있는 진짜 정보를 동네생활에서 확인해보세요.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
 
-        <img class="big__ficture" src="./images/중고거래_이미지.avif">
-      </header>
+      <div class="total_section">
+        <div class="section_image">
+          <img class="big__ficture" src="./images/동네가게_이미지.avif">
+        </div>
+        <div class="section_explanation">
+          <div class="section_logo">
+            <img class="mini__icon" src="./images/동네가게_로고.avif">
+          </div>
+          <div class="section_words">
+            <div class="section_title">
+              <h2>
+                동네가게
+              </h2>
+            </div>
+            <div class="section_sentence">
+              <p>
+                동네 가게의 소식과 쿠폰, 이웃들의 후기로 내 근처 가게들을 발견할 수 있어요. 내 근처는 우리 동네 이웃들과 소상공인을 연결하고, 우리 동네 맞춤형 정보를 제공하는 공간이에요.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
 
-      <header class="section__header">
-        <img class="mini__icon" src="./images/동네생활_로고.avif">
+      <div class="total_section">
+        <div class="section_image">
+          <img class="big__ficture" src="./images/당근비즈니스_이미지.avif">
+        </div>
+        <div class="section_explanation">
+          <div class="section_logo">
+            <img class="mini__icon" src="./images/당근비즈니스_로고.avif">
+          </div>
+          <div class="section_words">
+            <div class="section_title">
+              <h2>
+                당근 비즈니스
+              </h2>
+            </div>
+            <div class="section_sentence">
+              <p>
+                당근 이웃을 내 고객으로 만드는 강력한 비결! 사장님부터 마케터까지 비즈니스 성장을 경험할 수 있어요.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
 
-        <h2 class="section title">
-          동네생활
-        </h2>
-        <p>
-          동네 실시간 소식부터, 맛집 정보, 모임, 일상 공유까지. 지금 우리 동네의 다양한 이야기를 이웃과 함께 나누어요. 동네 이웃만 알 수 있는 진짜 정보를 동네생활에서 확인해보세요.
-        </p>
 
-        <img class="big__ficture" src="./images/동네생활_이미지.avif">
-      </header>
-
-      <header class="section__header">
-        <img class="mini__icon" src="./images/동네가게_로고.avif">
-
-        <h2 class="section__header">
-          동네가게
-        </h2>
-        <p>
-          동네 가게의 소식과 쿠폰, 이웃들의 후기로 내 근처 가게들을 발견할 수 있어요. 내 근처는 우리 동네 이웃들과 소상공인을 연결하고, 우리 동네 맞춤형 정보를 제공하는 공간이에요.
-        </p>
-
-        <img class="big__ficture" src="./images/동네가게_이미지.avif">
-      </header>
 
 
     </section>
