중간 3문단짜리 추가

--- a/index.html
+++ b/index.html
@@ -134,6 +134,44 @@
         </div>
       </div>
 
+      <div class="semi_section">
+        <div class="semi_explanation">
+          <div class="semi_title">
+            <h2>
+              비즈프로필
+            </h2>
+          </div>
+          <div class="semi_sentence">
+            <p>
+              당근 속 내 가게, 비즈프로필을 만들어보세요. 이웃에게 알리고 싶은 소식 발행부터 쿠폰, 채팅, 광고까지 다양한 기능을 통해 근처 이웃에게 가게를 알릴 수 있어요.
+            </p>
+          </div>
+        </div>
+        <div class="semi_explanation">
+          <div class="semi_title">
+            <h2>
+              브랜드프로필
+            </h2>
+          </div>
+          <div class="semi_sentence">
+            <p>
+              브랜드프로필은 전국 곳곳의 지점 또는 대리점을 가지고 있는 브랜드 본사를 위한 서비스예요. 통합적으로 지점 정보 등록, 광고 및 프로모션 관리를 할 수 있어요.
+            </p>
+          </div>
+        </div>
+        <div class="semi_explanation">
+          <div class="semi_title">
+            <h2>
+              광고
+            </h2>
+          </div>
+          <div class="semi_sentence">
+            <p>
+              동네 이웃이 가장 많이 보는 당근에서 내 가게와 브랜드를 알리고, 매출을 늘릴 수 있어요. 전국은 물론 읍・면・동까지 세부적으로 원하는 지역을 타겟팅할 수 있어요.
+            </p>
+          </div>
+        </div>
+      </div>
 
 
 
