--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="section_words">
             <div class="section_title">
               <h2>
-                <a href="https://www.daangn.com/fleamarket/"> 중고거래 </a>
+                <a href="https://www.daangn.com/fleamarket/"> 중고거래↗ </a>
               </h2>
             </div>
             <div class="section_sentence">
@@ -99,7 +99,7 @@
           <div class="section_words">
             <div class="section_title">
               <h2>
-                동네가게
+                <a href="https://www.daangn.com/kr/nearby-stores/"> 동네가게↗ </a>
               </h2>
             </div>
             <div class="section_sentence">
@@ -122,7 +122,7 @@
           <div class="section_words">
             <div class="section_title">
               <h2>
-                당근 비즈니스
+                <a href="https://business.daangn.com/"> 당근비즈니스↗ </a>
               </h2>
             </div>
             <div class="section_sentence">
@@ -173,12 +173,106 @@
         </div>
       </div>
 
+      <div class="total_section">
+        <div class="section_image">
+          <img class="big__ficture" src="./images/당근알바_이미지.avif">
+        </div>
+        <div class="section_explanation">
+          <div class="section_logo">
+            <img class="mini__icon" src="./images/당근알바_로고.avif">
+          </div>
+          <div class="section_words">
+            <div class="section_title">
+              <h2>
+                <a href="https://www.daangn.com/kr/jobs/about/"> 당근 알바↗ </a>
+              </h2>
+            </div>
+            <div class="section_sentence">
+              <p>
+                우리 동네에서 찾는 당근 알바. 당근하듯 쉽고 빠르게 동네에서 일거리를 찾고 일할 분을 구할 수 있어요. 단기 알바부터 전문 일거리까지 가장 가까운 거리의 다양한 알바를 지금 바로 구해보세요.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="total_section">
+        <div class="section_image">
+          <img class="big__ficture" src="./images/중고차_이미지.avif">
+        </div>
+        <div class="section_explanation">
+          <div class="section_logo">
+            <img class="mini__icon" src="./images/중고차_로고.avif">
+          </div>
+          <div class="section_words">
+            <div class="section_title">
+              <h2>
+                <a href="https://www.daangn.com/kr/car/"> 중고차↗ </a>
+              </h2>
+            </div>
+            <div class="section_sentence">
+              <p>
+                직거래로 합리적인 가격에 중고차 거래를 해보세요. 투명하고 객관적인 차량 정보를 제공해 누구나 쉽게 중고차 매물을 살펴보고, 편리하게 거래할 수 있어요.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="total_section">
+        <div class="section_image">
+          <img class="big__ficture" src="./images/부동산_이미지.avif">
+        </div>
+        <div class="section_explanation">
+          <div class="section_logo">
+            <img class="mini__icon" src="./images/부동산_로고.avif">
+          </div>
+          <div class="section_words">
+            <div class="section_title">
+              <h2>
+                <a href="https://www.daangn.com/kr/realty/"> 부동산↗ </a>
+              </h2>
+            </div>
+            <div class="section_sentence">
+              <p>
+                당근에서 부동산도 편리하고, 투명하게 거래할 수 있어요. 기술력을 기반으로 허위 매물을 걸러내고, 부동산 거래 수요가 활발히 연결될 수 있도록 매물 정보를 정교화해요.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="total_section">
+        <div class="section_image">
+          <img class="big__ficture" src="./images/당근페이_이미지.avif">
+        </div>
+        <div class="section_explanation">
+          <div class="section_logo">
+            <img class="mini__icon" src="./images/당근페이_로고.avif">
+          </div>
+          <div class="section_words">
+            <div class="section_title">
+              <h2>
+                <a href="https://www.daangnpay.com/"> 당근페이↗ </a>
+              </h2>
+            </div>
+            <div class="section_sentence">
+              <p>
+                현금과 개인정보를 주고받지 않고 더 쉽고 안전하게 송금해요. 당근페이는 동네를 기반으로 일어나는 다양한 금융 생활에 활력을 더하고 싶어요.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
 
 
     </section>
 
   </main>
   
-  
+  <script src="index.js"></script>
 </body>
 </html>
