푸터 작업 시작작

--- a/index.html
+++ b/index.html
@@ -264,14 +264,28 @@
           </div>
         </div>
       </div>
-
-
-
-
-
     </section>
-
   </main>
+
+  <footer class="footer_total">
+    <div class="footer_link">
+      <div class="footer_document">
+        <a href="https://daangn.notion.site/2b7689002cd847d78155695b5b194838"> 개인정보처리방침↗ </a>
+        <a href="https://www.notion.so/daangn/6fdd92981e4a42d8b29c89cbbba7a8b7"> 브랜드 리소스↗ </a>
+        <a href="https://about.daangn.com/faq/"> 자주 묻는 질문 </a>
+        <a href="https://about.daangn.com/ir/"> IR </a>
+        <a href="https://about.daangn.com/company/pr/"> PR </a>
+      </div>
+
+    </div>
+    <div class="footer_address">
+      <p> 주소 : 서울특별시 서초구 강남대로 465, 교보강남타워 11층 </p>
+      <p> (IR 관련 문의 : ir@daangn.com) </p>
+      <p> (채용 관련 문의 : recruit@daangn.com) </p>
+    </div>
+
+
+  </footer>
   
   <script src="index.js"></script>
 </body>
