--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         당신 근처의 지역 생활 커뮤니티
       </h1>
 
-      <div class="total_section">
+      <div class="total_section" id="first_section">
         <div class="section_image">
           <img class="big__ficture" src="./images/중고거래_이미지.avif">
         </div>
@@ -279,11 +279,14 @@
 
     </div>
     <div class="footer_address">
-      <p> 주소 : 서울특별시 서초구 강남대로 465, 교보강남타워 11층 </p>
-      <p> (IR 관련 문의 : ir@daangn.com) </p>
-      <p> (채용 관련 문의 : recruit@daangn.com) </p>
+      <div> 주소 : 서울특별시 서초구 강남대로 465, 교보강남타워 11층 (IR 관련 문의 : <a href="ir@daangn.com">ir@daangn.com</a>) </div>
+      <div> (채용 관련 문의 : <a href="recruit@daangn.com">recruit@daangn.com</a>) </div>
     </div>
 
+    <div class="footer_symbol">
+      <p> © 당근마켓 </p>
+
+    </div>
 
   </footer>
   
